# fbterm-eink

./: .gitignore  README  build_order  configure.ac
src/: Makefile.am  fbdev.cpp  fbdev.h  fbshell.cpp  fbshellman.cpp  fbterm  fbterm.cpp  improxy.cpp  input.cpp  screen.cpp  screen.h
terminfo/: Makefile.am
